Use native java8 code